--- a/CLINICA VETERINARIA/CLINICA VETERINARIA.vbproj
+++ b/CLINICA VETERINARIA/CLINICA VETERINARIA.vbproj
@@ -118,5 +118,11 @@
     </None>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Very-Basic-Binoculars-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Very-Basic-Binoculars-icon1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
